# fluctuation-regularized-optimization

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REPORT.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_validation.yml
.github/workflows/: tests.yml
benchmarks/: blackbox_benchmark.py  casimir_data_fit.py  ml_benchmark.py  pde_benchmark.py  pinn_benchmark.py
benchmarks/results/: blackbox_log.txt  blackbox_results.csv  casimir_fit_log.txt  casimir_fit_results.csv  ml_curves.json  ml_results.csv  pde_curves.json  pde_results.csv  pinn_log.txt  pinn_results.csv
casimir_opt/: __init__.py  pinn.py  swarm.py  torch_optim.py
casimir_opt/core/: __init__.py  lifshitz.py  matsubara.py  spectral.py
docs/: api.md  index.md  mechanisms.md  release.md  reproducibility.md
docs/release-notes/: v0.1.0.md
examples/: quickstart.py
fluctuation_opt/: __init__.py  pinn.py  swarm.py  torch_optim.py
fluctuation_opt/core/: __init__.py  lifshitz.py
paper/: README.md  paper.tex
tests/: test_integration.py  test_lifshitz.py  test_matsubara.py  test_pinn.py  test_spectral.py  test_swarm.py  test_torch_optim.py
