[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "casimir-opt"
version = "0.1.0"
description = "Casimir-effect-based optimization: zero-point-energy regularized gradient descent and Lifshitz-coupled swarm search, with PINN utilities."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steven Reid" }]
keywords = ["optimization", "pinn", "casimir-effect", "swarm-optimization", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
bench = ["scipy>=1.10", "matplotlib>=3.7", "scikit-learn>=1.3"]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "scipy>=1.10", "matplotlib>=3.7", "scikit-learn>=1.3", "build>=1.2"]

[tool.setuptools.packages.find]
include = ["casimir_opt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
